moved retrofit export button up byy generate button, and added EDOMH export link for retrofits (only for single ships, since it can't accept more than that)

--- a/index.html
+++ b/index.html
@@ -992,7 +992,10 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 									</table>
 								</div>
 							</div>
-							<button name="retrofit_builds_run" class="text">Generate Retrofit Report</button>
+							<div class="analysis_retrofit_buttons">
+								<button name="retrofit_builds_run">Generate Retrofit Report</button>
+								<button name="retrofit_export" id="retrofit_export"><svg class="iconsvg export"><use xlink:href="#icon_export"/></svg> Export Retrofit Report ...</button>
+							</div>
 							<div class="analysis_retrofit_section">
 								<div id="analysis_retrofit_steps" class="analysis_retrofit_panel">
 									<div class="analysis_retrofit_divider">
@@ -1054,7 +1057,6 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 									</div>
 								</div>
 							</div>
-							<button name="retrofit_export" id="retrofit_export" class="text"><svg class="iconsvg export"><use xlink:href="#icon_export"/></svg> Export Retrofit Report ...</button>
 						</div>
 					</div>
 				</form>
