removed hidden eddbid fields from retrofit table, since the eddb.io xref link is generated in a more sensible way now

--- a/index.html
+++ b/index.html
@@ -1014,10 +1014,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 											</thead>
 											<tbody>
 												<tr>
-													<td>
-														<label class="checkbox"><input type="checkbox" name="retrofit_steps_show_" checked><div><div class="check"></div></div></label>
-														<input type="hidden" name="retrofit_steps_xref_" value="">
-													</td>
+													<td><label class="checkbox"><input type="checkbox" name="retrofit_steps_show_" checked><div><div class="check"></div></div></label></td>
 													<td class="retrofit_steps_build">Sidewinder</td>
 													<td>1C Lightweight Alloy</td>
 													<td>Eng</td>
