--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 -->
 		<title edsy-text="edsy">EDSY</title>
 		<meta name="application-name" content="EDSY">
-		<meta name="edsy-versions-html" id="edsy_versions_html" content="308159902,308159902,308159902,308159902"><!-- HTML,CSS,DB,JS -->
-		<meta name="last-modified" id="last_modified" content="20230601">
+		<meta name="edsy-versions-html" id="edsy_versions_html" content="308179903,308179903,308159902,308179903"><!-- HTML,CSS,DB,JS -->
+		<meta name="last-modified" id="last_modified" content="20240113">
 		<meta name="author" content="taleden">
 		<meta name="description" content="EDSY is a ship outfitting tool for Elite Dangerous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -144,6 +144,24 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 					<symbol id="icon_engineered" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
 						<path d="M 6.5,0 l 6,3.25 0,6 -5.5,3 -6,-3.25 0,-6 z M 5.75,7.25 a 1.5,1.5 0 0 0 2,-2 a 1.5,1.5 0 0 0 -2,2 z"/>
 					</symbol>
+					<symbol id="icon_techbroker" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
+						<path d="M 6.5,2 a 1.5,1.5 0 0 1 0,3 a 1.5,1.5 0 0 1 0,-3 m 0,0.75 a 0.75,0.75 0 0 0 0,1.5 a 0.75,0.75 0 0 0 0,-1.5 z"/>
+						<path d="M 9.5,5 a 1.5,1.5 0 0 1 0,3 a 1.5,1.5 0 0 1 0,-3 m 0,0.75 a 0.75,0.75 0 0 0 0,1.5 a 0.75,0.75 0 0 0 0,-1.5 z"/>
+						<path d="M 6.5,8 a 1.5,1.5 0 0 1 0,3 a 1.5,1.5 0 0 1 0,-3 m 0,0.75 a 0.75,0.75 0 0 0 0,1.5 a 0.75,0.75 0 0 0 0,-1.5 z"/>
+						<path d="M 3.5,5 a 1.5,1.5 0 0 1 0,3 a 1.5,1.5 0 0 1 0,-3 m 0,0.75 a 0.75,0.75 0 0 0 0,1.5 a 0.75,0.75 0 0 0 0,-1.5 z"/>
+						<path d="M 3.75,2 a 2.75,2 0 0 1 5.5,0 h -1.25 a 1.5,1 0 0 0 -3,0 z"/>
+						<path d="M 3.75,11 a 2.75,2 0 0 0 5.5,0 h -1.25 a 1.5,1 0 0 1 -3,0 z"/>
+						<path d="M 0,5 v -1 a 2,2 0 0 1 2,-2 v 1 a 1,1 0 0 0 -1,1 v 1 z"/>
+						<path d="M 13,5 v -1 a 2,2 0 0 0 -2,-2 v 1 a 1,1 0 0 1 1,1 v 1 z"/>
+						<path d="M 0,6 h 2.5 v 1 h -1.5 v 2 a 1,1 0 0 0 1,1 v 1 a 2,2 0 0 1 -2,-2 z"/>
+						<path d="M 13,6 h -2.5 v 1 h 1.5 v 2 a 1,1 0 0 1 -1,1 v 1 a 2,2 0 0 0 2,-2 z"/>
+					</symbol>
+					<symbol id="icon_community" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
+						<ellipse cx="6.5" cy="7" rx="1.5" ry="2.5"/>
+						<path d="M 3,11 a 3.5,2 0 0 1 7,0 z"/>
+						<path d="M 0,9 a 3.5,2 0 0 1 2.625,-1.875 a 1.5,2.5 0 1 1 2.25,-3 l -0.875,1.875 v 2.5 l -1,0.5 z"/> -->
+						<path d="M 13,9 a 3.5,2 0 0 0 -2.625,-1.875 a 1.5,2.5 0 1 0 -2.25,-3 l 0.875,1.875 v 2.5 l 1,0.5 z"/> -->
+					</symbol>
 					<symbol id="icon_blueprint_rand_band" viewbox="0 0 13 13" stroke="none" fill="black" opacity="0.33" shape-rendering="geometricPrecision">
 						<path d="M 5.125,0.125 a 6.5,6.5 0 0 1 2.75,0 l -0.375,2.5 a 4,4 0 0 0 -2,0 z"/>
 					</symbol>
@@ -185,6 +203,9 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 				</defs>
 			</svg>
 		</div>
+		<!-- TODO --
+		<div style="z-index:9999;position:absolute;background-color:white;color:black;"><svg class="iconsvg" style="height:500px;width:500px;"><use xlink:href="#icon_community"/></svg></div>
+		<!-- -->
 		<div id="page">
 			<div id="page_header">
 				<header id="header_title">
