added query tool: draggable '?' in upper-right to give touch interfaces access to ABBR popup notes; fixed bug in retrofit export with empty exp effects; fixed some export popups having an extra 'null' title message

--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 					<label class="togglebutton"><input name="tab" type="radio" value="options"><div><svg class="iconsvg unknown"><use xlink:href="#icon_unknown"/></svg><svg class="iconsvg repair"><use xlink:href="#icon_repair"/></svg><span edsy-text="ui-help">Help</span></div></label>
 				</form>
 				<div id="header_version">
+					<div id="query_glow"></div>
+					<div id="query_tool">
+						<svg class="iconsvg unknown"><use xlink:href="#icon_unknown"/></svg>
+						<div id="query_info">Foo: bar baz.</div>
+					</div>
 					<abbr id="version_label" title=""></abbr>
 					<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X76V6PNF8CAV4&source=url"><img src="btn_donate_TN.gif" width="56" height="21"></a>
 				</div>
