added apple-touch-icon reference since apple just assumes everyone will always add more special headers just for them rather than have logs full of 404s

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 		<link rel="icon" sizes="48x48" href="favicon-48.png">
 		<link rel="icon" sizes="152x152" href="favicon-152.png">
 		<link rel="icon" sizes="196x196" href="favicon-196.png">
+		<link rel="apple-touch-icon" href="favicon-196.png">
 		<link rel="mask-icon" href="favicon.svg" color="#ff7f00">
 		<link rel="apple-touch-icon-precomposed" href="favicon-152.png">
 	</head>
