added more robust version checking and update mechanism, fixed translations not yet loaded for version check popup

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 		<link rel="icon" sizes="152x152" href="favicon-152.png">
 		<link rel="icon" sizes="196x196" href="favicon-196.png">
 		<link rel="apple-touch-icon" href="favicon-196.png">
+		<link rel="apple-touch-icon-precomposed" href="favicon-196.png">
 		<link rel="mask-icon" href="favicon.svg" color="#ff7f00">
-		<link rel="apple-touch-icon-precomposed" href="favicon-152.png">
 	</head>
 	<body class="">
 		<div id="svg_defs">
@@ -210,7 +210,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 		<div id="page">
 			<div id="page_header">
 				<header id="header_title">
-					<a href="" edsy-text="edsy">EDSY</a>
+					<a href="index.html" edsy-text="edsy">EDSY</a>
 					<button id="window_maximize"><svg class="iconsvg maximize"><use xlink:href="#icon_maximize"/></svg></button>
 					<button id="window_minimize"><svg class="iconsvg minimize"><use xlink:href="#icon_minimize"/></svg></button>
 				</header>
