fixed query tool skipping a final position update if moved quickly before stopping

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 		<div id="page">
 			<div id="page_header">
 				<header id="header_title">
-					<a href="index.html" edsy-text="edsy">EDSY</a>
+					<a href="" edsy-text="edsy">EDSY</a>
 					<button id="window_maximize"><svg class="iconsvg maximize"><use xlink:href="#icon_maximize"/></svg></button>
 					<button id="window_minimize"><svg class="iconsvg minimize"><use xlink:href="#icon_minimize"/></svg></button>
 				</header>
@@ -224,7 +224,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 					<div id="query_glow"></div>
 					<div id="query_tool">
 						<svg class="iconsvg unknown"><use xlink:href="#icon_unknown"/></svg>
-						<div id="query_info">Foo: bar baz.</div>
+						<div id="query_info"></div>
 					</div>
 					<abbr id="version_label" title=""></abbr>
 					<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X76V6PNF8CAV4&source=url"><img src="btn_donate_TN.gif" width="56" height="21"></a>
