added link to contribute translations

--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 							<div>
 								<b edsy-text="ui-options-language">Language</b>
 								&mdash;
-								<span edsy-text="ui-options-language-desc">Select your language/locale.</span>
+								<span edsy-text="ui-options-language-desc">Select your language/locale. Many languages have very incomplete translations;</span>
+								<a href="https://crowdin.com/project/edsy" target="_blank" edsy-text="ui-options-language-help">you can help!</a>
 								<dl>
 									<dd><select name="language">
 										<option value="" edsy-text="ui-options-language-default">(Browser Default)</option>
