--- a/index.html
+++ b/index.html
@@ -158,10 +158,17 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 						<path d="M 13,6 h -2.5 v 1 h 1.5 v 2 a 1,1 0 0 1 -1,1 v 1 a 2,2 0 0 0 2,-2 z"/>
 					</symbol>
 					<symbol id="icon_community" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
+						<!--
 						<ellipse cx="6.5" cy="7" rx="1.5" ry="2.5"/>
 						<path d="M 3,11 a 3.5,2 0 0 1 7,0 z"/>
-						<path d="M 0,9 a 3.5,2 0 0 1 2.625,-1.875 a 1.5,2.5 0 1 1 2.25,-3 l -0.875,1.875 v 2.5 l -1,0.5 z"/> -->
-						<path d="M 13,9 a 3.5,2 0 0 0 -2.625,-1.875 a 1.5,2.5 0 1 0 -2.25,-3 l 0.875,1.875 v 2.5 l 1,0.5 z"/> -->
+						<path d="M 0,9 a 3.5,2 0 0 1 2.625,-1.875 a 1.5,2.5 0 1 1 2.25,-3 l -0.875,1.875 v 2.5 l -1,0.5 z"/>
+						<path d="M 13,9 a 3.5,2 0 0 0 -2.625,-1.875 a 1.5,2.5 0 1 0 -2.25,-3 l 0.875,1.875 v 2.5 l 1,0.5 z"/>
+						-->
+						<path d="M 5,0 h 0.75 v 3 l -2.5,1.75 l -3.25,-0.75 v -0.25 z"/>
+						<path d="M 8,0 h -0.75 v 3 l 2.5,1.75 l 3.25,-0.75 v -0.25 z"/>
+						<path d="M 0,7 v -1.25 l 2.875,0.625 l 0.875,2.625 l -2.125,3 z"/>
+						<path d="M 13,7 v -1.25 l -2.875,0.625 l -0.875,2.625 l 2.125,3 z"/>
+						<path d="M 5,10 h 3 l 2,3 h -7 z"/>
 					</symbol>
 					<symbol id="icon_blueprint_rand_band" viewbox="0 0 13 13" stroke="none" fill="black" opacity="0.33" shape-rendering="geometricPrecision">
 						<path d="M 5.125,0.125 a 6.5,6.5 0 0 1 2.75,0 l -0.375,2.5 a 4,4 0 0 0 -2,0 z"/>
