hardcoded languages' own names since they should explicitly not be localized; changed translations of language names to include only the local name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ and is provided under a Creative Commons Attribution-NonCommercial 4.0 Internati
 The Elite Dangerous game logic and data in this file remains the property of Frontier Developments plc, and is used here as authorized by
 Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerous-media-usage-rules.510879/).
 -->
-		<title edsy-text="edsy">EDSY</title>
+		<title>EDSY</title>
 		<meta name="application-name" content="EDSY">
 		<meta name="edsy-versions-html" id="edsy_versions_html" content="308179904,308179904,308159902,308179904"><!-- HTML,CSS,DB,JS -->
 		<meta name="last-modified" id="last_modified" content="20240117">
@@ -218,7 +218,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 			<div id="query_glow"></div>
 			<div id="page_header">
 				<header id="header_title">
-					<a href="" edsy-text="edsy">EDSY</a>
+					<a href="">EDSY</a>
 					<button id="window_maximize"><svg class="iconsvg maximize"><use xlink:href="#icon_maximize"/></svg></button>
 					<button id="window_minimize"><svg class="iconsvg minimize"><use xlink:href="#icon_minimize"/></svg></button>
 				</header>
