updated to 3.8.18.4: added Python Mk II and new FSD-SCOs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 -->
 		<title>EDSY</title>
 		<meta name="application-name" content="EDSY">
-		<meta name="edsy-versions-html" id="edsy_versions_html" content="308179906,308179904,308189902,308179904"><!-- HTML,CSS,DB,JS -->
-		<meta name="last-modified" id="last_modified" content="20240119">
+		<meta name="edsy-versions-html" id="edsy_versions_html" content="308189904,308189904,308189904,308189904"><!-- HTML,CSS,DB,JS -->
+		<meta name="last-modified" id="last_modified" content="20240509">
 		<meta name="author" content="taleden">
 		<meta name="description" content="EDSY is a ship outfitting tool for Elite Dangerous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -983,7 +983,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 													<option value="" edsy-text="ui-retrofit-settings-expeffects-never">never</option>
 													<option value="wpn" edsy-text="ui-retrofit-settings-expeffects-wpn">to weapons only</option>
 													<option value="wpn,cpp" edsy-text="ui-retrofit-settings-expeffects-wpn-pp">to weapons and PPs</option>
-													<option value="wpn,cpp,cfsd" edsy-text="ui-retrofit-settings-expeffects-wpn-pp-fsd">to weapons, PPs, and FSDs</option>
+													<option value="wpn,cpp,cfsd,cfsdo" edsy-text="ui-retrofit-settings-expeffects-wpn-pp-fsd">to weapons, PPs, and FSDs</option>
 													<option value="all" selected edsy-text="ui-retrofit-settings-expeffects-always">always</option>
 												</select></td>
 											</tr>
