added pre-engineered flag for modules

--- a/index.html
+++ b/index.html
@@ -353,6 +353,13 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 											<div id="engineering_selects">
 												<select name="blueprint"><option value="" edsy-text="option-no-blueprint">(No Blueprint)</option></select>
 												<div class="togglebutton">
+													<label class="checkbox left">
+														<input type="checkbox" name="pre_engineered">
+														<div>
+															<div class="check"></div>
+															<span edsy-text="ui-details-blueprint-preeng">Pre</span>
+														</div>
+													</label>
 													<span edsy-text="ui-details-blueprint-grade">Grade</span>
 													<input id="blueprint_grade_1" name="blueprint_grade" type="radio" value="1">
 													<input id="blueprint_grade_2" name="blueprint_grade" type="radio" value="2">
