--- a/index.html
+++ b/index.html
@@ -1111,11 +1111,21 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 								<span edsy-text="ui-options-hide-small-desc">Display only the largest size class of each available module type in the SLOT view of the module browser.</span>
 								<dl>
 									<dd><select name="onlybest">
-										<option value="none" edsy-text="ui-options-onlybest-none">None</option>
-										<option value="some" edsy-text="ui-options-onlybest-some">Most (except for Power Plants, Thrusters, and Power Distributors)</option>
-										<option value="all" edsy-text="ui-options-onlybest-all">All</option>
+										<option value="none" edsy-text="ui-options-hide-small-none">None</option>
+										<option value="some" edsy-text="ui-options-hide-small-some">Most (except for Power Plants, Thrusters, and Power Distributors)</option>
+										<option value="all" edsy-text="ui-options-hide-small-all">All</option>
 									</select></dd>
 								</dl>
+							</div>
+							<div>
+								<label class="checkbox left"><input type="checkbox" name="revsize"><div><div class="check"></div><span edsy-text="ui-options-revsize">Reverse Module Size Order</span></div></label>
+								&mdash;
+								<span edsy-text="ui-options-revsize-desc">Sort modules by size class in descending order in the module browser, rather than ascending order.</span>
+							</div>
+							<div>
+								<label class="checkbox left"><input type="checkbox" name="revrating"><div><div class="check"></div><span edsy-text="ui-options-revrating">Reverse Module Rating Order</span></div></label>
+								&mdash;
+								<span edsy-text="ui-options-revrating-desc">Sort modules by rating letter in descending order in the module browser, rather than ascending order.</span>
 							</div>
 							<div>
 								<label class="checkbox left"><input type="checkbox" name="experimental"><div><div class="check"></div><span edsy-text="ui-options-experimental-mode">Experimental Mode</span></div></label>
