changed the 'Hide Small Modules: some' option to also show smaller Fuel Tanks

--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 								<dl>
 									<dd><select name="onlybest">
 										<option value="none" edsy-text="ui-options-hide-small-none">None</option>
-										<option value="some" edsy-text="ui-options-hide-small-some">Most (except for Power Plants, Thrusters, and Power Distributors)</option>
+										<option value="some" edsy-text="ui-options-hide-small-some">Most (except for Power Plants, Thrusters, Power Distributors, and Fuel Tanks)</option>
 										<option value="all" edsy-text="ui-options-hide-small-all">All</option>
 									</select></dd>
 								</dl>
